--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 .idea/*
 .ipynb_checkpoints/*
+main/__pycache__/*
+scripts/__pycache__/*
 env/*
 
 test/*
 results/*
+!results/.gitkeep
 instances/rakaj_all/*
+
