--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 .idea/*
-.ipynb_checkpoints/*
+**/*.ipynb_checkpoints/ 
 main/__pycache__/*
-scripts/__pycache__/*
+utils/__pycache__/*
 env/*
 
-test/*
 results/*
 !results/.gitkeep
 instances/rakaj_all/*
+instances/images/*
+!instances/images/.gitkeep
 
+test/*
+notebooks/test.ipynb
+notebooks/ga_test.ipynb
