--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,17 @@ main/__pycache__/*
 utils/__pycache__/*
 env/*
 
-results/*
-!results/.gitkeep
+# results/*
+# !results/.gitkeep
 instances/rakaj_all/*
 instances/images/*
 !instances/images/.gitkeep
+instances/small/*
+instances/medium/*
+instances/large/*
+!instances/small/small_instances.json
+!instances/medium/medium_instances.json
+!instances/large/large_instances.json
 
 test/*
 notebooks/test.ipynb
