--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,5 @@ updates:
     directory: "/" 
     schedule:
       interval: "monthly"
+    # Disable version updates for hex dependencies
+    open-pull-requests-limit: 0
